fix position select2 fixing the problem that the select 2 collapse of input field.

--- a/molgenis-omx-dataexplorer/src/main/resources/css/dataexplorer.css
+++ b/molgenis-omx-dataexplorer/src/main/resources/css/dataexplorer.css
@@ -174,6 +174,16 @@ a.accordion-toggle:hover,a.accordion-toggle:focus,a.accordion-toggle:active
 	margin-bottom: 10px
 }
 
+#filter-modal .modal-body {
+	min-height: 200px;
+	max-height: 400px;
+	padding-bottom: 0;
+}
+
+#filter-modal .form-horizontal .control-group .select2-choices{
+	position: static;
+}
+
 /* default fancytree styling */
 span.fancytree-node{
 	border: none;
@@ -200,6 +210,10 @@ ul.fancytree-container {
 	display: inline-block;
 	padding-left: 20px;
 	vertical-align: top;
+}
+
+.form-horizontal.filter-controls {
+	margin-bottom: 60px;
 }
 
 .ui-rangeSlider-bar {
